fix: better topbar layout columns and collapsing

--- a/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
+++ b/packages/webui/src/client/ui/RundownView/RundownHeader/RundownHeader.scss
@@ -67,16 +67,20 @@
 		height: 100%;
 		width: 100%;
 		display: flex;
+		flex-direction: row-reverse;
 		align-items: center;
 		justify-content: space-between;
 		background: transparent;
+		overflow-x: auto;
+		overflow-y: hidden;
+		gap: 2em;
 	}
 
 	.rundown-header__left {
+		order: 3;
 		display: flex;
 		align-items: center;
 		flex: 1 1 0px;
-		min-width: 0;
 
 		.rundown-header__left-context-menu-wrapper {
 			display: flex;
@@ -84,23 +88,29 @@
 			gap: 2.5em;
 			height: 100%;
 		}
+
+		.rundown-header__onair-wrapper {
+			min-width: 9.5em;
+			display: flex;
+			align-items: center;
+		}
 	}
 
 	.rundown-header__right {
+		order: 1;
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
 		flex: 1 1 0px;
-		min-width: 0;
 		gap: 1em;
 	}
 
 	.rundown-header__clocks {
+		order: 2;
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		flex: none;
-		min-width: 0;
 		.timing-clock {
 			color: #ffffff;
 			font-size: 1.4em;
